syntax = "proto3";
package Course;

service CourseService {
    rpc ListForTop(ListRequest) returns(ListResponse) {}
    rpc GetDetail(DetailRequest) returns(DetailResponse) {}
}

message CourseModel {
    int32 course_id=1;
    string course_name=2;
    string course_disp_name=3;
    float course_price=4;
    float course_price2=5;
    int32 addtime=6;
}

message ListRequest {
    int32 size=1;
}

message DetailRequest {
    // @inject_tag: uri:"course_id"
    int32 course_id=1;
}

message ListResponse {
    repeated CourseModel result = 1;
}

message DetailResponse {
    CourseModel result = 1;
}